# BtrScan

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: BtrBlocksFileNameResolver.hpp  BtrLocalScanner.hpp  BtrS3Scanner.hpp  Downloader.hpp  PartsResolver.hpp  ProgressTracker.hpp  local.cmake  types.hpp
src/: BtrLocalScanner.cpp  BtrS3Scanner.cpp  Downloader.cpp  PartsResolver.cpp  ProgressTracker.cpp  local.cmake
test/: local.cmake  tester.cpp
test/test-cases/: basic-download.cpp  basic-scanner.cpp  metadata-resolver.cpp  progress-tracker.cpp
